@@ -114,7 +114,7 @@ item.silentgear.tool_head.sickle=Sickle Blade
 item.silentgear.tool_head.sword=Sword Blade & Crossguard
 
 # Crafting Item
-item.silentgear.advanced_upgrade_base=Advanced Upgrade Base
+item.silentgear.advanced_upgrade_base.name=Advanced Upgrade Base
 item.silentgear.black_dye.name=Black Dye
 item.silentgear.blue_dye.name=Blue Dye
 item.silentgear.blueprint_paper.name=Blueprint Paper
@@ -276,10 +276,15 @@ part.silentgear.type.tip=Tip Upgrade
 
 jei.silentgear.blueprint.desc=Blueprints and templates are used to craft tool heads and armor. Blueprints can be reused infinitely, templates are single-use. When used in the crafting station, you can mix materials. Otherwise, the materials must all be the same. Check the tooltip of the blueprint/template for details on crafting the final item.
 jei.silentgear.crafting_station.desc=An improved crafting table which has a small internal inventory and a window which shows the tooltip of the item being crafted. Allows material mixing when crafting tool heads or armor.
+jei.silentgear.dagger.desc=Basically a very light sword. Low damage and shorter reach, but very high attack speed. It also reduces the target's invulnerability time when hit.
+jei.silentgear.katana.desc=A sword that is slightly faster, but a little weaker than classic swords. Katana can also reach a little further than standard swords.
+jei.silentgear.machete.desc=A multi-function blade. It's a sword, axe, and sickle, but works best as a sword. Slightly slower attack speed, but higher damage than standard swords. Like sickles, it can clear an area of plants, but the range is smaller.
+jei.silentgear.mattock.desc=The ultimate farming tool, capable of tilling and digging soil and chopping wood. A bit slower than a shovel or axe, but more durable. Should work in anything that requires a hoe.
 jei.silentgear.part_analyzer.desc=Determines the quality of armor/tool head materials. Requires no power or fuel. Hoppers can insert/extract items.
 jei.silentgear.red_card_upgrade.desc=Tools and armor with the red card upgrade can break like their vanilla counterparts, instead of becoming a "broken" item that can still be repaired.
-jei.silentgear.spoon_upgrade.desc=Let's your pickaxe mine dirt and such. Because reasons. No, it won't work on hammers.
+jei.silentgear.spoon_upgrade.desc=Let's your pickaxe mine dirt and such. Because reasons.
 jei.silentgear.sword.desc=A classic sword with balanced damage and speed. The guard takes the appearance of the second material used in crafting.
+jei.silentgear.tip_upgrade.desc=Allows an existing tool/weapon to be further upgraded. Most tip upgrades will add (or subtract) a fixed amount to certain stats, but some add will multipliers instead. Hold the Ctrl key to view stat modifiers in the tooltip.
 jei.silentgear.tool_head.desc=Tool heads, blades, bow limbs, and more! These are the core of tools and weapons, constructed with a blueprint/template and some number of main tool materials. Check the blueprint/template tooltip for more info.
 
 jei.silentgear.tooltip.sample1=Sample recipe
